<resources>
    <string name="app_name">Prolific Library</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view">Try adding some books</string>
    <string name="activity_books_title">Library</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Trash</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="categories">Categories</string>
    <string name="action_share">Share book</string>
    <string name="action_delete_all">Delete All Books</string>
    <string name="book_title">Book title</string>
    <string name="send_to">Send book to</string>
    <string name="title_activity_new_book">Add a new book</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="agree">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="edit_author">Edit author</string>
    <string name="edit_author_hint">e.g Joshua Bloch</string>
    <string name="edit_publisher">Edit publisher</string>
    <string name="edit_publisher_hint">e.g Pearson</string>
    <string name="edit_categories">Add categories</string>
    <string name="edit_categories_hint">e.g android, ios, programming</string>
    <string name="edit_book_title">Add book title</string>
    <string name="edit_book_title_hint">e.g Effective Java</string>
    <string name="progress_dialog">Updating</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_name">Checkout with name</string>
    <string name="edit_enter_name_hint">e.g Chet Haase</string>

    <string name="shortcut_short_add_new_book">New book</string>
    <string name="shortcut_long_add_new_book">Add a new book</string>
    <string name="shortcut_disabled_add_new_book">Add a new book</string>

    <string name="check_internet_connection">Please check internet connection</string>
    <string name="failed_network_request">Could not complete request</string>
    <string name="book_title_required">The book title is required</string>
    <string name="checkout_time">Checked out: %s</string>
    <string name="no_category">No category</string>
    <string name="not_checkedout">Not yet checked out</string>
    <string name="unknown">Unknown</string>
</resources>
