<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_height="350dp"
            android:clickable="true"
            android:layout_width="match_parent">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:paddingStart="72dp"
                android:background="?attr/selectableItemBackground"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.8"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_book_150dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/book_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="72dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="bottom"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.4"
                    tools:text="Android Programming" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


                </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/content_area_space"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:id="@+id/author_view"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_author_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="72dp"
                        android:layout_marginLeft="72dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/author_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:paddingBottom="2dp"
                            tools:text="Go channels are bad and you should feel bad"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/author"/>
                    </LinearLayout>
                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:id="@+id/publisher_view"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="72dp"
                        android:layout_marginLeft="72dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/publisher_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:paddingBottom="2dp"
                            tools:text="Penguin Productions"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/publisher"/>
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="@dimen/content_area_space"
                    android:layout_marginBottom="@dimen/content_area_space"
                    android:background="@color/divider" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:id="@+id/last_checkout_view"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_last_checkout_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="72dp"
                        android:layout_marginLeft="72dp"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/last_checkout_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:paddingBottom="2dp"
                            tools:text="Tevin Jeffrey"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/last_checkout_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            tools:text="Jan 15, 2016"/>
                    </LinearLayout>
                </FrameLayout>
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="@dimen/content_area_space"
                    android:layout_marginBottom="@dimen/content_area_space"
                    android:background="@color/divider" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:id="@+id/categories_view"
                    android:background="?attr/selectableItemBackground"
                    android:layout_gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_categories_24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="72dp"
                        android:layout_marginLeft="72dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/categories_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:paddingBottom="2dp"
                            tools:text="android"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:text="@string/categories"/>
                    </LinearLayout>
                </FrameLayout>
                
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_margin="@dimen/fab_margin"
            android:id="@+id/fab_checkout"
            app:srcCompat="@drawable/ic_checkout_24dp"
            android:clickable="true"/>


    </android.support.design.widget.CoordinatorLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>